<resources>
    <string name="app_name">NUMAD22Sp_ChenjieBei</string>
    <string name="about_me_string">About Me</string>
    <string name="e_mail_string">E-mail</string>
    <string name="name_string">Name</string>
    <string name="name_hint_string">name_hint</string>
    <string name="email_hint_string">email_hint</string>
    <string name="my_first_android_homework_string">My_First_Android_Homework</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="a">A</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="f">F</string>
    <string name="pressed">Pressed: -</string>
    <string name="url">URL</string>
    <string name="check">check</string>
    <string name="name">name</string>
    <string name="icon">icon</string>
    <string name="click">click</string>
    <string name="cancel">cancel</string>
    <string name="get_location_string">get location</string>
    <string name="web_service">Web Service</string>
</resources>